# arch-dotfiles

./: .gitignore  README.md
home/: .ideavimrc  .zshenv
home_config/.config/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf  hyprsunset.conf  monitors.conf  workspaces.conf
home_config/.config/kitty/: kitty.conf
home_config/.config/nvim/: lazy-lock.json
home_config/.config/opencode/: opencode.json  opencode.jsonc
home_config/.config/quickshell/: .gitignore  PALETTE_REFACTOR.md  SETUP.md  shell.qml
home_config/.config/quickshell/Backend/: .gitignore  Cargo.toml  README.md
home_config/.config/quickshell/Backend/docs/specs/: 2026-04-02-test-suite-design.md
home_config/.config/quickshell/Backend/src/: app.rs  config.rs  lib.rs  main.rs
home_config/.config/quickshell/Backend/src/core/: config.rs  dbus_listener.rs  enums.rs  mod.rs  module.rs
home_config/.config/quickshell/Backend/src/ipc/: client.rs  handler.rs  server.rs
home_config/.config/quickshell/Backend/src/modules/network/: action.rs  actor.rs  commands.rs  commands_tests.rs  enums.rs  events.rs  mod.rs  proxies.rs  queries.rs  queries_tests.rs  state.rs  state_tests.rs
home_config/.config/quickshell/Backend/src/utils/: compare.rs  macros.rs  mod.rs
home_config/.config/quickshell/Backend/tests/: config_test.rs  ipc_test.rs
home_config/.config/tmux/: tmux.conf
home_config/.config/yazi/: theme.toml  yazi.toml
home_config/nvim/: init.lua  lazy-lock.json
home_config/quickshell/: docs.md  shell.qml
home_config/quickshell/Components/: ThemeMenuCard.qml  qmldir  (+1 more)
scripts/: update_pkglist.sh
(+207 files in other folders)
