[package]
name = "qs-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
futures = "0.3.32"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
phf = { version = "0.13.1", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt", "sync", "fs", "net", "signal", "io-util", "macros", "time", "rt-multi-thread"] }
tokio-util = "0.7.18"
toml = "1.0.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
zbus = "5.14.0"

[dev-dependencies]
tempfile = "3"
serial_test = "3.0"
